@@ -33,7 +33,7 @@ This is the file name without path."
     (define-key map (kbd "C-c C-c") #'aider-send-block-or-region)
     (define-key map (kbd "C-c C-b") #'aider-send-block-by-line) ;; considering retire this since C-u C-c C-n will do same thing
     (define-key map (kbd "C-c C-z") #'aider-switch-to-buffer)
-    (define-key map (kbd "C-c C-f") #'aider-prompt-insert-file-path)
+    (define-key map (kbd "C-c C-f") #'aider-prompt-insert-add-file-path)
     (define-key map (kbd "C-c C-i") #'aider-core-insert-prompt)
     (define-key map (kbd "C-c C-y") #'aider-prompt-cycle-file-command)
     map)
@@ -288,7 +288,8 @@ Special commands:
   (add-hook 'completion-at-point-functions #'aider-core--command-completion nil t)
   (add-hook 'post-self-insert-hook #'aider-core--auto-trigger-command-completion nil t)
   ;; Automatically trigger file path insertion for file-related commands
-  (add-hook 'post-self-insert-hook #'aider-core--auto-trigger-file-path-insertion nil t)
+  (add-hook 'post-self-insert-hook #'aider-core--auto-trigger-add-file-path-insertion nil t)
+  (add-hook 'post-self-insert-hook #'aider-core--auto-trigger-drop-file-path-insertion nil t)
   ;; Bind space key to aider-core-insert-prompt when evil package is available
   (add-hook 'aider-prompt-mode-hook
             (lambda ()
